--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Discord Home</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -19,60 +22,66 @@
                 <button class="btn-secondary">Abra o Discord no seu navegador</button>
             </div>
         </div>
-
     </header>
-
-<!--     <main>
-        <img src="assets/images/Section-Image-1.png" alt="section 1">
-        <img src="assets/images/Section-Image-2.png" alt="section 2">
-        <img src="assets/images/Section-Image-3.png" alt="section 3">
-        <img src="assets/images/Section-Image-4.png" alt="section 4">
-
-    </main> -->
 
         <!-- Sections -->
     <section class="feature">
+        <div class="feature-image">
+            <picture>
+                <source media="(max-width: 390px)" srcset="assets/images/Section-Image-1-small.png">
+                <img src="assets/images/Section-Image-1.png" alt="Exemplo de chat">
+            </picture>
+        </div>
         <div class="feature-text">
             <h2>Crie um espaço controlado por convite onde você se sinta em casa</h2>
             <p>Os servidores Discord são organizados em canais com assuntos para vocês colaborarem, compartilharem ou simplesmente falarem do dia sem entupir um chat geral.</p>
         </div>
-        <div class="feature-image">
-            <img src="assets/images/Section-Image-1.png" alt="Exemplo de chat">
-        </div>
     </section>
 
-    <section class="feature reverse">
-        <div class="feature-image">
-            <img src="assets/images/Section-Image-2.png" alt="Exemplo de canal de voz">
-        </div>
-        <div class="feature-text">
+    <section class="feature-2">
+        <div class="feature-text-2">
             <h2>Aqui é fácil se encontrar</h2>
             <p>Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.</p>
+        </div>
+        <div class="feature-image-2">
+            <picture>
+                <source media="(max-width: 390px)" srcset="assets/images/Section-Image-2-small.png">
+                <img src="assets/images/Section-Image-2.png" alt="Exemplo de canal de voz">
+            </picture>
         </div>
     </section>
 
     <section class="feature">
+        <div class="feature-image">
+            <picture>
+                <source media="(max-width: 390px)" srcset="assets/images/Section-Image-3-small.png">
+                <img src="assets/images/Section-Image-3.png" alt="Exemplo de chat">
+            </picture>
+        </div>
         <div class="feature-text">
             <h2>Para poucos e para muitos</h2>
             <p>Organize qualquer comunidade com ferramentas de moderação e acesso personalizado a membros. Dê poderes especiais aos membros, monte canais privados e muito mais.</p>
         </div>
-        <div class="feature-image">
-            <img src="assets/images/Section-Image-3.png" alt="Exemplo de roles">
-        </div>
     </section>
 
-    <section class="feature">
-        <div class="feature-text">
+    <section class="final-feature">
+        <div class="final-feature-text">
             <h2>TECNOLOGIA DE CONEXÃO CONFIÁVEL</h2>
             <p>Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.</p>
         </div>
-        <div class="feature-image">
-            <img src="assets/images/Section-Image-4.png" alt="Exemplo de videochamada">
+        <div class="final-feature-image">
+            <picture>
+                <source media="(max-width: 390px)" srcset="assets/images/Section-Image-4-small.png">
+                <img src="assets/images/Section-Image-4.png" alt="Exemplo de videochamada">
+            </picture>
         </div>
     </section>
 
     <footer class="footer">
-        <img src="assets/images/Footer.png" alt="lDiscord Logo">
+        <picture>
+            <source media="(max-width: 390px)" srcset="assets/images/Footer-small.png">
+            <img src="assets/images/Footer.png" alt="Discord Logo">
+        </picture>
     </footer>
 
 </body>
